--- a/src/pages/posts/test.mdx
+++ b/src/pages/posts/test.mdx
@@ -5,7 +5,11 @@ pubDate: 'Date goes here'
 
 draft: true
 ---
+import ContentNote from '../../components/ContentNote.astro'
 
 This is a page to test out MDX.
 
 ## Testing this out
+
+<ContentNote type='info'/>
+<ContentNote type='soifj'/>
