--- a/src/pages/posts/color.mdx
+++ b/src/pages/posts/color.mdx
@@ -17,4 +17,11 @@ Calculating the color difference to create a reliable scoring system was much ha
 
 Anyways, check it out on [codesandbox](https://codesandbox.io/s/colormatch-bi3jrb).
 
+<iframe src="https://codesandbox.io/embed/colormatch-bi3jrb?fontsize=14&hidenavigation=1&theme=dark&view=preview"
+    style="width:100%; height:500px; border:0; border-radius: 4px; overflow:hidden;"
+    title="colormatch"
+    allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
+    sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
+></iframe>
+
 The LCH color space is a perceptually-uniform color space that browsers are thinking about supporting. When and if that happens, I'll revisit this idea and make a V2. 
