--- a/src/pages/posts/phished.mdx
+++ b/src/pages/posts/phished.mdx
@@ -12,6 +12,7 @@ In September 2022 I was selected to lead a team of seven developers and designer
 Phished was an interdisplinary capstone project between two different programs at BCIT. We used Next.js, Firebase, and Nodemailer. On December 2 the team presented Phished at the Telus Theatre in front of our peers and industry professionals. [Click to check it out!](https://phished.app)
 
 <br />
+<br />
 
 ## The Problem
 
@@ -20,25 +21,37 @@ Phishing is a type of online scam in which criminals send fake emails or texts t
 It is important for everyone, but particularly the vulnerable, to be aware of the risks of phishing and to take steps to protect themselves.
 
 <br />
+<br />
 
 ## The Solution
 
 With Phished, users can send (harmless) phishing emails to test their friends and family. This exposure helps elderly and other vulnerable people get better at avoiding actual phishing scams. They can gain real-life experience without any risk.
 
+<br />
+
+<figure>
 ![A screenshot showing the landing page of Phished.](/phished/home-screen.jpg)
+<figcaption>Phished has interactive exercises to aid learning.</figcaption>
+</figure>
+
+<br />
 
 Users can also track progress over time on their dashboard – we track some baseline metrics, like how many of their phishing attempts are successful.
 
+<br />
 <br />
 
 ## The Design Process
 
 We began by creating our user personas. We used these personas to gain insight into their behaviours and pain points. After mapping out possible user journey maps, we began to ideate in Figma. 
 
+<br />
 ![The user personas created for Phished. They are both adult children who have family members or acquaintances that are vulnerable to phishing attacks.](/phished/personas.jpg)
+<br />
 
 We created prototypes and iterated on them quickly to address pain points and other complaints we received during user testing.
 
+<br />
 <br />
 
 ## The Development Process
@@ -50,6 +63,7 @@ Backend development was significantly more challenging because we had to develop
 We eventually settled on using Nodemailer, Firebase, Sendinblue, and Handlebars.js.
 
 <br />
+<br />
 
 ## Lessons Learned
 
@@ -58,3 +72,7 @@ Overall, I'm proud of what we accomplished in the three months we had to develop
 This was my first time leading a team. I wanted to create a safe working environment, encourage communication, and empower my teammates to be independant. 
 
 I learned how important it is to be proactive, engaged, and enthusiastic. I think this project was great for me to develop my soft skills and learn what it means to work collaboratively. 
+
+<br />
+<br />
+<br />
