update phished link

--- a/src/pages/posts/phished.mdx
+++ b/src/pages/posts/phished.mdx
@@ -9,7 +9,7 @@ image:
 
 In September 2022 I was selected to lead a team of seven developers and designers to create Phished, a platform where users are empowered to protect their friends & family from phishing attacks.
 
-Phished was an interdisplinary capstone project between two different programs at BCIT. We used Next.js, Firebase, and Nodemailer. On December 2 the team presented Phished at the Telus Theatre in front of our peers and industry professionals. [Click to check it out!](https://phished.app)
+Phished was an interdisplinary capstone project between two different programs at BCIT. We used Next.js, Firebase, and Nodemailer. On December 2 the team presented Phished at the Telus Theatre in front of our peers and industry professionals. [Click to check it out!](https://phished.up.railway.app/)
 
 <br />
 <br />
