--- a/src/pages/posts/phished.mdx
+++ b/src/pages/posts/phished.mdx
@@ -1,78 +1,104 @@
 ---
-layout: '../../layouts/MarkdownPostLayout.astro'
-title: 'Phished – Phish Friends & Family'
-pubDate: 'Published on November 21, 2022'
+layout: "../../layouts/MarkdownPostLayout.astro"
+title: "Phished – Phish Friends & Family"
+pubDate: "Published on November 21, 2022"
 image:
-    url: '/phished-screenshot.webp'
-    alt: 'A tablet and smartphone are next to each other, each displaying a screenshot from the Phished website. The Phished logo, a fish with an envelope for a body, is displayed on the right with the Phished wordmark.'
+  url: "/phished-screenshot.webp"
+  alt: "A tablet and smartphone are next to each other, each displaying a screenshot from the Phished website. The Phished logo, a fish with an envelope for a body, is displayed on the right with the Phished wordmark."
 ---
 
 In September 2022 I was selected to lead a team of seven developers and designers to create Phished, a platform where users are empowered to protect their friends & family from phishing attacks.
 
-Phished was an interdisplinary capstone project between two different programs at BCIT. We used Next.js, Firebase, and Nodemailer. On December 2 the team presented Phished at the Telus Theatre in front of our peers and industry professionals. [Click to check it out!](https://phished.up.railway.app/)
+Phished was an interdisplinary capstone project between two different programs at BCIT. We used Next.js, Firebase, and Nodemailer. [Click to check it out!](https://phished.up.railway.app/)
 
 <br />
 <br />
 
-## The Problem
+## Frontend and Authentication
 
-Phishing is a type of online scam in which criminals send fake emails or texts that appear to come from legitimate organizations. Elderly people and other vulnerable groups are particularly at risk of falling for phishing scams because they may not be as familiar with the internet and technology as younger people, making them more likely to trust fake emails and websites.
+We used the [Mantine component library](https://mantine.dev/) to build out our front-end. Mantine made it easy to integrate theming and custom styling into our web app. To authenticate users we used NextAuth.js (now known as [Auth.js](https://authjs.dev/)) which made it straightforward to setup and connect Phished to OAuth2 and OpenID Connect providers. We chose these tools because they're open-source, TypeScript based, and have great documentation.
 
-It is important for everyone, but particularly the vulnerable, to be aware of the risks of phishing and to take steps to protect themselves.
+Our <code>\_app.jsx</code> document imports providers from Mantine and Auth.js to handle our theming and user sessions.
 
-<br />
-<br />
+```js
+import { useState } from "react";
+import { ColorSchemeProvider, MantineProvider } from "@mantine/core";
+import { authOptions } from "./api/auth/[...nextauth]";
+import { unstable_getServerSession } from "next-auth";
+import { SessionProvider } from "next-auth/react";
 
-## The Solution
+export default function App({
+  Component,
+  pageProps: { session, ...pageProps },
+}) {
+  const [colorScheme, setColorScheme] = useState("light");
 
-With Phished, users can send (harmless) phishing emails to test their friends and family. This exposure helps elderly and other vulnerable people get better at avoiding actual phishing scams. They can gain real-life experience without any risk.
+  function toggleColorScheme(value) {
+    const nextColorScheme =
+      value || (colorScheme === "dark" ? "light" : "dark");
+    setColorScheme(nextColorScheme);
+  }
+
+  return (
+    <>
+      <SessionProvider session={session}>
+        <ColorSchemeProvider
+          colorScheme={colorScheme}
+          toggleColorScheme={toggleColorScheme}
+        >
+          <MantineProvider
+            withGlobalStyles
+            withNormalizeCSS
+            theme={{ colorScheme }}
+          >
+            <Component {...pageProps} />
+          </MantineProvider>
+        </ColorSchemeProvider>
+      </SessionProvider>
+    </>
+  );
+}
+```
 
 <br />
 
 <figure>
-![A screenshot showing the landing page of Phished.](/phished/home-screen.jpg)
-<figcaption>Phished has interactive exercises to aid learning.</figcaption>
+  ![A screenshot showing Phished in light and dark
+  mode.](/phished/dark-light.jpg)
+  <figcaption>
+    Mantine makes it easy to implement a light and dark theme.
+  </figcaption>
 </figure>
 
 <br />
-
-Users can also track progress over time on their dashboard – we track some baseline metrics, like how many of their phishing attempts are successful.
-
-<br />
 <br />
 
-## The Design Process
+## Backend and Phishing Emails
 
-We began by creating our user personas. We used these personas to gain insight into their behaviours and pain points. After mapping out possible user journey maps, we began to ideate in Figma. 
+Firebase allowed us to easily integrate a real-time database that stores data as JSON and can be accessed directly from the client-side. Along with Firebase's security and data validation tools, we're utilizing their serverless function triggers to send our phishing emails.
 
-<br />
-![The user personas created for Phished. They are both adult children who have family members or acquaintances that are vulnerable to phishing attacks.](/phished/personas.jpg)
-<br />
+Our emails are sent with [Nodemailer](https://nodemailer.com/about/), a module for Node.js applications. We use [sendinblue](https://www.sendinblue.com/) as our email service provider and [Handlebars.js](https://handlebarsjs.com/), a templating language for generating HTML content.
 
-We created prototypes and iterated on them quickly to address pain points and other complaints we received during user testing.
+```js
+// A phishing email example using Handlebars.js
 
-<br />
-<br />
-
-## The Development Process
-
-Development was split into frontend and backend tasks. For the frontend we used Mantine UI to do most of the heavy lifting. 
-
-Backend development was significantly more challenging because we had to develop our own phishing technique. We experimented with several tools, including AWS SES. 
-
-We eventually settled on using Nodemailer, Firebase, Sendinblue, and Handlebars.js.
-
-<br />
-<br />
-
-## Lessons Learned
-
-Overall, I'm proud of what we accomplished in the three months we had to develop Phished. My teammates were incredible to work with and are the reason this project turned out so well.
-
-This was my first time leading a team. I wanted to create a safe working environment, encourage communication, and empower my teammates to be independant. 
-
-I learned how important it is to be proactive, engaged, and enthusiastic. I think this project was great for me to develop my soft skills and learn what it means to work collaboratively. 
-
-<br />
-<br />
-<br />
+<body>
+  <div id="data"></div>
+  <h2>FACEBOOK</h2>
+  <hr />
+  <p>Hello {{ bodyName }},</p>
+  <p>Your Facebook password was changed on {{ datetime }}</p>
+  <p>
+    <strong>If you did this, </strong>you can safely disregard this email.
+  </p>
+  <p>
+    <strong>If you didn't do this, </strong>please{" "}
+    <a href={{ phishedLink }}>secure your account</a>.
+  </p>
+  <p>Thank you, </p>
+  <p>The Facebook Security Team</p>
+  <br />
+  <br />
+  <a href={{ unsubscribeLink }}>Unsubscribe</a>
+</body>
+```
