dates working on home page

--- a/src/pages/posts/design.mdx
+++ b/src/pages/posts/design.mdx
@@ -2,7 +2,7 @@
 layout: "../../layouts/MarkdownPostLayout.astro"
 title: "Creative Work & Other Stuff"
 pubDate: "Last updated on November 23, 2022"
-date: "NOV 2022"
+date: "221123"
 image:
   url: "/creative-work.png"
   alt: 'The words "Creative Work", with a scribbled arrow aimed at the words "& Other Stuff".'
