--- a/src/pages/posts/phished.mdx
+++ b/src/pages/posts/phished.mdx
@@ -2,7 +2,7 @@
 layout: "../../layouts/MarkdownPostLayout.astro"
 title: "Phished – Phish Friends & Family"
 pubDate: "Published on November 21, 2022"
-date: "NOV 2022"
+date: "221121"
 image:
   url: "/phished-screenshot.webp"
   alt: "A tablet and smartphone are next to each other, each displaying a screenshot from the Phished website. The Phished logo, a fish with an envelope for a body, is displayed on the right with the Phished wordmark."
