--- a/src/pages/posts/text2array.mdx
+++ b/src/pages/posts/text2array.mdx
@@ -2,7 +2,7 @@
 layout: "../../layouts/MarkdownPostLayout.astro"
 title: "Text 2 Array Tool"
 pubDate: "Published on December 30, 2022"
-date: "DEC 2022"
+date: "221230"
 image:
   url: "/t2a.jpg"
   alt: "The acronym t2a being spread into an array that contains the elements t, 2, and a."
