add view all posts button, hr override, post dates

--- a/src/pages/posts/color.mdx
+++ b/src/pages/posts/color.mdx
@@ -2,7 +2,7 @@
 layout: "../../layouts/MarkdownPostLayout.astro"
 title: "HTML Color Name Game"
 pubDate: "Published on November 21, 2022"
-date: "NOV 2022"
+date: "221121"
 image:
   url: "/noisy-gradient.webp"
   alt: "A grainy gradient made of purple, pink, orange, and red."
