copy text changes

--- a/src/pages/posts/phished.mdx
+++ b/src/pages/posts/phished.mdx
@@ -1,6 +1,6 @@
 ---
 layout: "../../layouts/MarkdownPostLayout.astro"
-title: "Phished – Phish Friends & Family"
+title: "Phished – Send Phishing Emails"
 pubDate: "Published on November 21, 2022"
 date: "221121"
 image:
