--- a/src/content/posts/color.mdx
+++ b/src/content/posts/color.mdx
@@ -1,12 +1,11 @@
 ---
-layout: "../../layouts/MarkdownPostLayout.astro"
 title: "HTML Color Name Game"
-pubDate: "Published on November 21, 2022"
-date: "221121"
+date: 2022-11-21
+description: "Guess the shades of random HTML color codes."
+draft: false
 image:
-  url: "/noisy-gradient.webp"
+  src: "/noisy-gradient.webp"
   alt: "A grainy gradient made of purple, pink, orange, and red."
-url: "/posts/color"
 ---
 
 In this game users are prompted to guess the color when given an HTML color name. The most challenging part of this project was developing the scoring system – I decided to base it around the difference between the user's color and the actual value of the HTML color name using their RGB values.
