--- a/src/content/posts/phished.mdx
+++ b/src/content/posts/phished.mdx
@@ -1,12 +1,10 @@
 ---
-layout: "../../layouts/MarkdownPostLayout.astro"
 title: "Phished – Send Phishing Emails"
-pubDate: "Published on November 21, 2022"
-date: "221121"
+date: 2022-11-21
+description: "An application to send and track phishing emails."
 image:
-  url: "/phished-screenshot.webp"
+  src: "/phished-screenshot.webp"
   alt: "A tablet and smartphone are next to each other, each displaying a screenshot from the Phished website. The Phished logo, a fish with an envelope for a body, is displayed on the right with the Phished wordmark."
-url: "/posts/phished"
 ---
 
 import Technologies from "../../components/Technologies.astro";
