--- a/src/content/posts/text2array.mdx
+++ b/src/content/posts/text2array.mdx
@@ -1,12 +1,10 @@
 ---
-layout: "../../layouts/MarkdownPostLayout.astro"
 title: "Text 2 Array Tool"
-pubDate: "Published on December 30, 2022"
-date: "221230"
+date: 2022-12-30
+description: "I'm tired of typing out arrays."
 image:
-  url: "/t2a.jpg"
+  src: "/t2a.jpg"
   alt: "The acronym t2a being spread into an array that contains the elements t, 2, and a."
-url: "/posts/text2array"
 ---
 
 Typing out arrays is a chore, so [I made a tool to speed up the process.](https://text2array.vercel.app/)
