--- a/src/content/posts/hotToast.mdx
+++ b/src/content/posts/hotToast.mdx
@@ -1,9 +1,11 @@
 ---
-layout: "../../layouts/MarkdownPostLayout.astro"
 title: "How to use react-hot-toast with Astro"
-pubDate: "Published on January 23, 2023"
-date: "230123"
-url: "/posts/hotToast"
+date: 2023-01-23
+description: "Using react-hot-toast for notifcations in Astro."
+draft: false
+image:
+  src: "/phished-screenshot.webp"
+  alt: "A tablet and smartphone are next to each other, each displaying a screenshot from the Phished website. The Phished logo, a fish with an envelope for a body, is displayed on the right with the Phished wordmark."
 ---
 
 import { Code } from "astro/components";
