--- a/src/content/posts/hotToast.mdx
+++ b/src/content/posts/hotToast.mdx
@@ -77,7 +77,7 @@ const notify = () => toast("Toast!");
 If there is no client directive the HTML will be rendered without JavaScript. [Reference](https://docs.astro.build/en/reference/directives-reference/)
 
 ```tsx
-<ToastExample client:visible message="Click me!" />
+<ToastExample client:load message="Click me!" />
 ```
 
 <br />
