--- a/src/content/posts/phished.mdx
+++ b/src/content/posts/phished.mdx
@@ -1,13 +1,17 @@
 ---
-title: "Phished – Send Phishing Emails"
+title: 'Phished – Send Phishing Emails'
 date: 2022-11-21
-description: "An application to send and track phishing emails."
+description: 'An application to send and track phishing emails.'
 image:
-  src: "/phished-screenshot.webp"
-  alt: "A tablet and smartphone are next to each other, each displaying a screenshot from the Phished website. The Phished logo, a fish with an envelope for a body, is displayed on the right with the Phished wordmark."
+  src: '/phished-screenshot.webp'
+  alt:
+    'A tablet and smartphone are next to each other, each displaying a
+    screenshot from the Phished website. The Phished logo, a fish with
+    an envelope for a body, is displayed on the right with the Phished
+    wordmark.'
 ---
 
-import Technologies from "../../components/Technologies.astro";
+import Technologies from '../../components/Technologies.astro';
 
 <Technologies
   emoji="📟"
@@ -18,13 +22,20 @@ import Technologies from "../../components/Technologies.astro";
 
 <br />
 
-I led a team of seven to create Phished, a web application to send (harmless!) phishing emails and track the results. [Click to check it out!](https://phished.up.railway.app/)
+Teamed up with six other developers and designers to create Phished, a
+web application to send (harmless!) phishing emails and track the
+results. [Click to check it out!](https://phished.up.railway.app/)
 
 <br />
 <br />
 
 ## Why build Phished?
 
-Our goal for this project was to encourage users to take a proactive role in the fight against phishing emails. We found that elderly individuals are disproportionally targeted and impacted by online scams, many of which originate from fraudulent emails.
+Our goal for this project was to encourage users to take a proactive
+role in the fight against phishing emails. We found that elderly
+individuals are disproportionally targeted and impacted by online
+scams, many of which originate from fraudulent emails.
 
-We also realized that those same elderly users were unlikely to be the ones using Phished, so our focus was on giving Internet-savvy a tool to educate their loved ones in an interactive and positive manner. The best way to learn is to do, which means that in order to get better at avoiding phishing emails we need to expose them to real-world examples.
+We also realized that those same elderly users were unlikely to be the
+ones using Phished, so our focus was on giving Internet-savvy a tool
+to educate their loved ones in an interactive and positive manner.
