--- a/src/content/posts/text2array.mdx
+++ b/src/content/posts/text2array.mdx
@@ -1,16 +1,21 @@
 ---
-title: "Text 2 Array Tool"
+title: 'Text 2 Array Tool'
 date: 2022-12-30
 description: "I'm tired of typing out arrays."
 image:
-  src: "/t2a.jpg"
-  alt: "The acronym t2a being spread into an array that contains the elements t, 2, and a."
+  src: '/t2a.jpg'
+  alt:
+    'The acronym t2a being spread into an array that contains the
+    elements t, 2, and a.'
 ---
 
-Typing out arrays is a chore, so [I made a tool to speed up the process.](https://text2array.vercel.app/)
+[I made a tool to type arrays quickly.](https://text2array.vercel.app/)
 
-You type the elements you want inside the array and the tool will format them to be copy pasted into your array. There are options for quotations, commas, or spaces.
+You type the elements you want inside the array and the tool formats
+them to be copy pasted. There are options for quotations, commas, or
+spaces.
 
-I've implemented a "quick fill" feature which fills the input box with some common lists, like the English alphabet and the days of the week.
+I've implemented a "quick fill" feature which fills the input box with
+some common lists, like the English alphabet and the days of the week.
 
 I'm planning to keep adding additional quick fill options.
