change blue, tech comp renders children

--- a/src/content/posts/text2array.mdx
+++ b/src/content/posts/text2array.mdx
@@ -9,6 +9,14 @@ image:
     elements t, 2, and a.'
 ---
 
+import Technologies from '../../components/Technologies.astro';
+
+<Technologies emoji="📟" type="tech">
+  **Technologies used:** Vite, React
+</Technologies>
+
+<br />
+
 [I made a tool to type arrays quickly.](https://text2array.vercel.app/)
 
 You type the elements you want inside the array and the tool formats
