--- a/src/content/posts/phished.mdx
+++ b/src/content/posts/phished.mdx
@@ -13,12 +13,10 @@ image:
 
 import Technologies from '../../components/Technologies.astro';
 
-<Technologies
-  emoji="📟"
-  type="tech"
-  string="Technologies used: Next.js, Firebase, Nodemailer, NextAuth, Mantine,
-  Handlebars.js, Chart.js"
-/>
+<Technologies emoji="📟" type="tech">
+  **Technologies used:** Next.js, Firebase, Nodemailer, NextAuth,
+  Mantine, Handlebars.js, Chart.js
+</Technologies>
 
 <br />
 
@@ -26,7 +24,6 @@ Teamed up with six other developers and designers to create Phished, a
 web application to send (harmless!) phishing emails and track the
 results. [Click to check it out!](https://phished.up.railway.app/)
 
-<br />
 <br />
 
 ## Why build Phished?
