replace post images

--- a/src/content/posts/phished.mdx
+++ b/src/content/posts/phished.mdx
@@ -3,7 +3,7 @@ title: 'Phished – Send Phishing Emails'
 date: 2022-11-21
 description: 'An application to send and track phishing emails.'
 image:
-  src: '/phished-screenshot.webp'
+  src: '/phished-screenshot.jpg'
   alt:
     'A tablet and smartphone are next to each other, each displaying a
     screenshot from the Phished website. The Phished logo, a fish with
