--- a/src/content/posts/text2array.mdx
+++ b/src/content/posts/text2array.mdx
@@ -23,7 +23,62 @@ You type the elements you want inside the array and the tool formats
 them to be copy pasted. There are options for quotations, commas, or
 spaces.
 
-I've implemented a "quick fill" feature which fills the input box with
-some common lists, like the English alphabet and the days of the week.
+There's a "quick fill" feature which fills the input box with some
+common lists, like the English alphabet and the months of the year.
 
-I'm planning to keep adding additional quick fill options.
+<br />
+
+## Spaghetti, spaghetti everywhere
+
+Hopefully this is the worst code I'll ever write.
+
+<br />
+
+```jsx
+<textarea
+  placeholder={
+    noSpace
+      ? perCharacter
+        ? `${quote}o${quote},${quote}n${quote},${quote}e${quote},${quote}t,${quote},${quote}w${quote},${quote}o${quote},${quote}t${quote},${quote}h${quote},${quote}r${quote},${quote}e${quote},${quote}e${quote}`
+        : lineBreak
+        ? `${quote}one two three${quote},${quote}four five six${quote}`
+        : `${quote}one${quote},${quote}two${quote},${quote}three${quote}`
+      : perCharacter
+      ? `${quote}o${quote}, ${quote}n${quote}, ${quote}e${quote}, ${quote}t, ${quote}, ${quote}w${quote}, ${quote}o${quote}, ${quote}t${quote}, ${quote}h${quote}, ${quote}r${quote}, ${quote}e${quote}, ${quote}e${quote}`
+      : lineBreak
+      ? `${quote}one two three${quote}, ${quote}four five six${quote}`
+      : `${quote}one${quote}, ${quote}two${quote}, ${quote}three${quote}`
+  }
+  value={output}
+  readOnly
+/>
+```
+
+<figcaption>That's one thick ternary!</figcaption>
+
+<br />
+
+This code is for the output preview of the placeholder text. There are
+multiple options to format the output which made it a challenge to
+cover all the cases. You can:
+
+1. Choose between single or double quotes
+2. Choose between spaces or no spaces
+3. Split by line breaks
+4. Split by character
+
+Some options aren't compatible with one another, so I had to make sure
+the options, placeholder text, and output preview were reflected
+accurately.
+
+<br />
+
+## Final Thoughts
+
+As the application grew and I tried to provide more formatting
+options, things grew increasingly complex. If I were to do this again,
+I would try using React's <code>useReducer</code> hook to simplify the
+state of the formatting options.
+
+I actually used this tool for some of my other projects, like a
+guessing game based on Taylor Swift's discography.
