--- a/src/content/posts/design.mdx
+++ b/src/content/posts/design.mdx
@@ -1,15 +1,24 @@
 ---
 # layout: "../../layouts/MarkdownPostLayout.astro"
-title: "Creative Work & Other Stuff"
+title: 'Creative Work & Other Stuff'
 date: 2022-11-23
 draft: false
 image:
-  src: "/creative-work.png"
-  alt: 'The words "Creative Work", with a scribbled arrow aimed at the words "& Other Stuff".'
+  src: '/creative-work.png'
+  alt:
+    'The words "Creative Work", with a scribbled arrow aimed at the
+    words "& Other Stuff".'
 ---
+
+import VerticalVideo from '../../components/VerticalVideo.astro';
 
 ![A young Steph Curry rises up to take the shot. On his right, present-day Steph Curry looks on as he dribbles a basketball.](/curry.png)
 
 ![A serif version of a poster for "The Proms", a BBC show.](/proms1.png)
 
 ![A sans-serif version of a poster for "The Proms", a BBC show.](/proms2.png)
+
+<figure>
+  <VerticalVideo />
+  <figcaption>Testing</figcaption>
+</figure>
