refactor vv component to include type

--- a/src/content/posts/draft.mdx
+++ b/src/content/posts/draft.mdx
@@ -124,4 +124,4 @@ Right aligned columns
 ![Minion](https://octodex.github.com/images/minion.png)
 ![Stormtroopocat](https://octodex.github.com/images/stormtroopocat.jpg 'The Stormtroopocat')
 
-<VerticalVideo />
+<VerticalVideo src="/snap.webm" type="webm" />
