various minor changes

--- a/src/content/posts/favTools23.mdx
+++ b/src/content/posts/favTools23.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'My Favorite Tools and Resources for Web Development in 2023'
+title: 'Web Development Tools I Use For Pretty Much Everything'
 date: 2023-02-18
 description: 'Here are some of the online tools I use the most.'
 draft: false
