minor style changes, phished desc

--- a/src/content/posts/phished.mdx
+++ b/src/content/posts/phished.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Phished – Send Phishing Emails'
 date: 2022-11-21
-description: 'An application to send and track phishing emails.'
+description: 'Customize, send, and track phishing emails to educate your loved ones.'
 image:
   src: '/phished-screenshot.jpg'
   alt:
