note component has secondary and warning

--- a/src/content/posts/phished.mdx
+++ b/src/content/posts/phished.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Phished – Send Phishing Emails'
+title: 'Fight Phishers by Phishing'
 date: 2022-11-21
-description: 'Customize, send, and track phishing emails to educate your loved ones.'
+description: 'Customize, send, and track phishing emails to educate your loved ones with Phished.'
 image:
   src: '/phished-screenshot.jpg'
   alt:
@@ -11,12 +11,12 @@ image:
     wordmark.'
 ---
 
-import Technologies from '../../components/Technologies.astro';
+import Note from '../../components/Note.astro';
 
-<Technologies emoji="📟" type="tech">
+<Note emoji="📟" type="tech">
   **Technologies used:** Next.js, Firebase, Nodemailer, NextAuth,
   Mantine, Handlebars.js, Chart.js
-</Technologies>
+</Note>
 
 <br />
 
@@ -80,6 +80,6 @@ Chart.js.
 I learned a lot about building a full-stack application from scratch.
 I developed my technical skills by working with unfamiliar tools like
 Nodemailer and NextAuth, and I'm confident that I can learn new
-technologies quickly. I also learned a lot about the importance of
+note quickly. I also learned a lot about the importance of
 collaboration and how to work with others in a team setting. I'm
 really proud of the work that we did on this project. 🎣
