--- a/src/content/posts/text2array.mdx
+++ b/src/content/posts/text2array.mdx
@@ -9,11 +9,11 @@ image:
     elements t, 2, and a.'
 ---
 
-import Technologies from '../../components/Technologies.astro';
+import Note from '../../components/Note.astro';
 
-<Technologies emoji="📟" type="tech">
+<Note emoji="📟" type="tech">
   **Technologies used:** Vite, React
-</Technologies>
+</Note>
 
 <br />
 
