fix bug for note component

--- a/src/content/posts/color.mdx
+++ b/src/content/posts/color.mdx
@@ -8,6 +8,14 @@ image:
   alt: "A grainy gradient made of purple, pink, orange, and red."
 ---
 
+import Note from '../../components/Note.astro';
+
+<Note emoji="📟" type="technology">
+  **Technologies used:** CodeSandbox, React
+</Note>
+
+<br />
+
 In this game users are prompted to guess the color when given an HTML color name. The most challenging part of this project was developing the scoring system – I decided to base it around the difference between the user's color and the actual value of the HTML color name using their RGB values.
 
 Calculating the color difference to create a reliable scoring system was much harder than I anticipated. Due to the way the human eyeball works, RGB values don't always correlate to how we perceive color.
