--- a/src/content/posts/phished.mdx
+++ b/src/content/posts/phished.mdx
@@ -13,7 +13,7 @@ image:
 
 import Note from '../../components/Note.astro';
 
-<Note emoji="📟" type="tech">
+<Note emoji="📟" type="technology">
   **Technologies used:** Next.js, Firebase, Nodemailer, NextAuth,
   Mantine, Handlebars.js, Chart.js
 </Note>
