--- a/src/content/posts/text2array.mdx
+++ b/src/content/posts/text2array.mdx
@@ -11,7 +11,7 @@ image:
 
 import Note from '../../components/Note.astro';
 
-<Note emoji="📟" type="tech">
+<Note emoji="📟" type="technology">
   **Technologies used:** Vite, React
 </Note>
 
