fix phished desc, undo arrow line break

--- a/src/content/posts/phished.mdx
+++ b/src/content/posts/phished.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Fight Phishers by Phishing'
 date: 2022-11-21
-description: 'Customize, send, and track phishing emails to educate your loved ones with Phished.'
+description: 'Send and track customizable phishing emails to educate your loved ones with Phished.'
 image:
   src: '/phished-screenshot.jpg'
   alt:
