--- a/src/content/posts/design.mdx
+++ b/src/content/posts/design.mdx
@@ -1,7 +1,8 @@
 ---
 # layout: "../../layouts/MarkdownPostLayout.astro"
-title: 'Creative Work & Other Stuff'
+title: 'Creative Work'
 date: 2022-11-23
+description: "and other stuff."
 draft: false
 image:
   src: '/creative-work.png'
