--- a/src/content/posts/text2array.mdx
+++ b/src/content/posts/text2array.mdx
@@ -81,4 +81,6 @@ I would try using React's <code>useReducer</code> hook to simplify the
 state of the formatting options.
 
 I actually used this tool for some of my other projects, like a
-guessing game based on Taylor Swift's discography.
+[guessing game based on Taylor Swift's discography](https://tsguess.vercel.app).
+
+<br />
