svgArrow title change

--- a/src/content/posts/svgArrow.mdx
+++ b/src/content/posts/svgArrow.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'SVG Arrow Conundrum'
+title: 'Inline SVG Icon Breaks to New Line'
 date: 2023-03-01
 description: 'How do I prevent my SVG arrow icon from breaking to a new line by itself?'
 draft: false
