change og, credit team Phished, 1to20 & tsguess post

--- a/src/content/posts/phished.mdx
+++ b/src/content/posts/phished.mdx
@@ -60,11 +60,11 @@ them to be more vigilant.
 
 I was the lead developer on this project, and I was responsible for
 implementing our design system, building the dashboard, and
-integrating with the backend. I worked closely with our designers to
+integrating the front-end application with data from our back-end. I worked closely with our designers to
 ensure that our design system was consistent and easy to use. We used
 Mantine, a React UI library, to build out our front-end.
 
-I also worked closely with our backend developers to build out the
+I also worked closely with our back-end developers to build out the
 site's infrastructure. We used Firebase's Firestore database to store
 user data and NextAuth to handle user authentication and
 authorization. I designed our phishing emails using Handlebars.js, an
@@ -83,3 +83,18 @@ Nodemailer and NextAuth, and I'm confident that I can learn new
 note quickly. I also learned a lot about the importance of
 collaboration and how to work with others in a team setting. I'm
 really proud of the work that we did on this project. 🎣
+
+<br />
+
+### Team Members
+[Yasmina Amir](https://www.linkedin.com/in/yasmina-amirifar/)
+
+[Sue Lee](https://www.linkedin.com/in/slee1204/)
+
+[Ivan Li](https://www.linkedin.com/in/ivan-ligahei/)
+
+[Lucia Martin](https://www.linkedin.com/in/luciaemm/)
+
+[Sejin Oh](https://www.linkedin.com/in/sj-oh/)
+
+[Ivan Tong](https://www.linkedin.com/in/itong539/)
