reorganize files in public

--- a/src/content/posts/color.mdx
+++ b/src/content/posts/color.mdx
@@ -4,7 +4,7 @@ date: 2022-11-21
 description: "Guess the shades of random HTML color codes."
 draft: false
 image:
-  src: "/noisy-gradient.webp"
+  src: "/posts/noisy-gradient.webp"
   alt: "A grainy gradient made of purple, pink, orange, and red."
 ---
 
