--- a/src/content/posts/design.mdx
+++ b/src/content/posts/design.mdx
@@ -5,7 +5,7 @@ date: 2022-11-23
 description: "and other stuff."
 draft: false
 image:
-  src: '/creative-work.png'
+  src: '/posts/creative-work.png'
   alt:
     'The words "Creative Work", with a scribbled arrow aimed at the
     words "& Other Stuff".'
