--- a/src/content/posts/phished.mdx
+++ b/src/content/posts/phished.mdx
@@ -3,7 +3,7 @@ title: 'Fight Phishers by Phishing'
 date: 2022-11-21
 description: 'Send and track customizable phishing emails to educate your loved ones with Phished.'
 image:
-  src: '/phished-screenshot.jpg'
+  src: '/posts/phished-screenshot.jpg'
   alt:
     'A tablet and smartphone are next to each other, each displaying a
     screenshot from the Phished website. The Phished logo, a fish with
