--- a/src/content/posts/macApps.mdx
+++ b/src/content/posts/macApps.mdx
@@ -3,7 +3,7 @@ title: '3 Useful Mac Apps'
 date: 2023-03-15
 description: 'These 3 applications are useful little utilities for Mac users.'
 image:
-  src: '/apps.jpg'
+  src: '/posts/apps.jpg'
   alt: 'The app icons for New File Menu, Tot, and Rectangle'
 ---
 
