--- a/src/content/posts/text2array.mdx
+++ b/src/content/posts/text2array.mdx
@@ -3,7 +3,7 @@ title: 'Text 2 Array Tool'
 date: 2022-12-30
 description: "I'm tired of typing out arrays."
 image:
-  src: '/t2a.jpg'
+  src: '/posts/t2a.jpg'
   alt:
     'The acronym t2a being spread into an array that contains the
     elements t, 2, and a.'
