--- a/src/content/posts/design.mdx
+++ b/src/content/posts/design.mdx
@@ -13,8 +13,8 @@ image:
 
 import VerticalVideo from '../../components/VerticalVideo.astro';
 
-![A young Steph Curry rises up to take the shot. On his right, present-day Steph Curry looks on as he dribbles a basketball.](/curry.png)
+![A young Steph Curry rises up to take the shot. On his right, present-day Steph Curry looks on as he dribbles a basketball.](/posts/curry.png)
 
-![A serif version of a poster for "The Proms", a BBC show.](/proms1.png)
+![A serif version of a poster for "The Proms", a BBC show.](/posts/proms1.png)
 
-![A sans-serif version of a poster for "The Proms", a BBC show.](/proms2.png)
+![A sans-serif version of a poster for "The Proms", a BBC show.](/posts/proms2.png)
